Publisher collapse button UI fix

--- a/features/apimgt/org.wso2.carbon.apimgt.publisher.feature/src/main/resources/extensions/publisher/assets/api/themes/default/css/apim_common.css
+++ b/features/apimgt/org.wso2.carbon.apimgt.publisher.feature/src/main/resources/extensions/publisher/assets/api/themes/default/css/apim_common.css
@@ -39,9 +39,9 @@ table.opt-selectable td {
 .collapse-icon-wrp:hover{color: #fff; background-color: #237BD5;}
 
 .icon-wrp{padding:5px 20px; height: 50px; width: 50px; margin-right: 15px;}
-#jsonform-1-elt-production_endpoints, #jsonform-1-elt-sandbox_endpoints,.jsonform-9-elt-production_endpoints{width: 100%;
+#jsonform-1-elt-production_endpoints, #jsonform-1-elt-sandbox_endpoints,.jsonform-9-elt-production_endpoints
+{width: 100%;
     background-color: #fff;
     border: 1px solid #E0E0E0;
-    padding: 6px 0;
-    margin-top: -10px;}
+    padding: 6px 0; margin-top: -10px;}
 
